--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/EstagioS
 spring.datasource.username=postgres
-spring.datasource.password=newsecurity
+spring.datasource.password=postgres
