--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-dev.hibernate.show.sql = true
-
-spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Postgres
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
