Adicionada Persistencia nos Modelos e criados Repositorys

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/EstagioS
+spring.datasource.url=jdbc:postgresql://localhost:5432/EstagioSearch
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=postgresql
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
